<resources>
    <string name="app_name">Hepsi Emlak</string>
    <string name="add_basket">Add Basket</string>
    <string name="product_name">Product Name</string>
    <string name="product_list">Product List</string>
    <string name="product_example_price">16 TL</string>
    <string name="remove">Remove</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="place_order">Place Order</string>
</resources>