<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/space_4dp"
    android:layout_marginTop="@dimen/space_8dp"
    android:layout_marginEnd="@dimen/space_4dp"
    android:background="@drawable/ic_product_cell_background"
    android:padding="4dp">

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/text_color_black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImageView"
        tools:text="@string/product_name" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8dp"
        android:layout_marginLeft="@dimen/space_8dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginRight="@dimen/space_16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:maxLines="1"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:textStyle="bold"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/productSell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productTitle"
        tools:text="@string/product_example_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/productSell"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:layout_marginRight="@dimen/space_16dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_basket"
        android:textAllCaps="false"
        android:textColor="@color/text_color_white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>